<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.NewTaskActivity"
    android:orientation="vertical"
    android:gravity="top"
    android:background="@color/bg"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:text="@string/menuAddTask"
        android:textAlignment="center"
        android:textSize="25sp"
        android:padding="10dp"
        android:background="?android:colorPrimaryDark"
        android:textColor="@color/text"
        tools:targetApi="lollipop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top">


        <EditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/tasks"
            android:drawableLeft="@drawable/tasks"
            android:ems="10"
            android:inputType="textCapSentences"
            android:scaleY="0.8"
            android:scaleX="0.8"
            android:drawablePadding="10dp"
            android:hint="@string/hintName" />

        <EditText
            android:id="@+id/txtDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/desc"
            android:drawableLeft="@drawable/desc"
            android:ems="10"
            android:inputType="textCapSentences"
            android:scaleY="0.8"
            android:scaleX="0.8"
            android:drawablePadding="10dp"
            android:hint="@string/hintDesc"/>

        <EditText
            android:id="@+id/txtExperience"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/exp"
            android:drawableLeft="@drawable/exp"
            android:ems="10"
            android:scaleY="0.8"
            android:scaleX="0.8"
            android:drawablePadding="10dp"
            android:hint="@string/hintExperience"
            android:inputType="textCapSentences" />

        <EditText
            android:id="@+id/txtGold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/gold"
            android:drawableLeft="@drawable/gold"
            android:ems="10"
            android:inputType="textCapSentences"
            android:scaleY="0.8"
            android:scaleX="0.8"
            android:drawablePadding="10dp"
            android:hint="@string/hintGold"/>

        <TextView
            android:id="@+id/seekBarLabel"
            android:drawableLeft="@drawable/low"
            android:drawableStart="@drawable/low"
            android:gravity="center_vertical"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:text="@string/txtImportanceLow"/>

        <SeekBar
            android:id="@+id/seekBar"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:max="2"
            android:progress="0" />

        <Button
            android:id="@+id/btnCreateTask"
            android:layout_width="match_parent"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:padding="15dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:background="@color/button"
            android:textColor="@color/text"
            android:text="@string/btnAddTask" />



    </LinearLayout>

</LinearLayout>