<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.NewCharacterActivity"
    android:gravity="top"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:text="@string/menuCreateChar"
        android:textAlignment="center"
        android:textSize="25sp"
        android:padding="10dp"
        android:background="?android:colorPrimaryDark"
        android:textColor="@color/text"
        tools:targetApi="lollipop"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/imgChar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/char1"
            android:layout_margin="20dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnPrevious"
                android:layout_width="wrap_content"
                android:layout_margin="5dp"
                android:padding="15dp"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:background="@color/button"
                android:textColor="@color/text"
                android:text="@string/imgPrevious"
                android:clickable="true"
                android:focusable="true"/>

            <Button
                android:id="@+id/btnNext"
                android:layout_width="wrap_content"
                android:layout_margin="5dp"
                android:padding="15dp"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:background="@color/button"
                android:textColor="@color/text"
                android:text="@string/imgNext"
                android:clickable="true"
                android:focusable="true"/>
        </LinearLayout>

        <EditText
            android:id="@+id/txtCharName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:inputType="textCapSentences"
            android:hint="@string/hintCharName"/>

        <Button
            android:id="@+id/btnCompleteCharacter"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="15dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:background="@color/button"
            android:textColor="@color/text"
            android:text="@string/btnCompleteCharacter" />
    </LinearLayout>

</LinearLayout>